--- a/auth/package.json
+++ b/auth/package.json
@@ -22,5 +22,13 @@
     "mongoose": "^5.10.9",
     "ts-node-dev": "^1.0.0",
     "typescript": "^4.0.3"
+  },
+  "devDependencies": {
+    "@types/jest": "^26.0.15",
+    "@types/supertest": "^2.0.10",
+    "jest": "^26.6.1",
+    "mongodb-memory-server": "^6.5.1",
+    "supertest": "^6.0.0",
+    "ts-jest": "^26.4.3"
   }
 }
